# ephemerkey

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN-management.md  DESIGN-policies.md  DESIGN.md  LICENSE  README.md
firmware/ephemerkey-config/: Cargo.toml
firmware/ephemerkey-config/src/: lib.rs
firmware/ephemerkey-core/: Cargo.toml
firmware/ephemerkey-core/src/: engine.rs  lib.rs  policy.rs  receipt.rs  reveal.rs  totp.rs
firmware/ephemerkey-crc/: Cargo.toml
firmware/ephemerkey-crc/src/: lib.rs
firmware/ephemerkey-emu/: Cargo.toml  Makefile  README.md
firmware/ephemerkey-emu/scenarios/: cascade-generator.json  chained-vault.json  chained-vault.script  courier.json  deadman.json  portable-vault.json  quorum.json  receipts.json  walk-vault.json
firmware/ephemerkey-emu/scripts/: cascade-generator.txt  courier.txt  deadman.txt  portable-vault.txt  quorum.txt  receipts.txt  walk-vault.txt
firmware/ephemerkey-emu/src/: main.rs  serial.rs
firmware/ephemerkey-envelope/: Cargo.toml
firmware/ephemerkey-envelope/src/: cbor.rs  config.rs  lib.rs  schema.rs
firmware/ephemerkey-frame/: Cargo.toml
firmware/ephemerkey-frame/src/: lib.rs
firmware/ephemerkey-nmea/: Cargo.toml
firmware/ephemerkey-nmea/src/: lib.rs
firmware/ephemerkey-provision/: Cargo.toml
firmware/ephemerkey-provision/src/: lib.rs
firmware/ephemerkey-rs/: Cargo.toml  Makefile  README.md  build.rs  memory.x  rust-toolchain.toml
firmware/ephemerkey-rs/.cargo/: config.toml
firmware/ephemerkey-rs/src/: buzzer.rs  clock.rs  config.rs  display.rs  gate.rs  generator.rs  gnss.rs  lock.rs  lockconsole.rs  main.rs  motion.rs  pacaes.rs  policy.rs  provision.rs  sensors.rs  usbcdc.rs  usbprov.rs  wifi.rs
firmware/ephemerkey-stm32/: Makefile  README.md  STM32U083KCUx_FLASH.ld
firmware/ephemerkey-stm32/include/: board.h  ephemerkey_config.h  geofence.h  gnss.h  stm32u0xx_hal_conf.h  totp_app.h
firmware/ephemerkey-stm32/src/: geofence.c  gnss.c  main.c  stm32u0xx_hal_msp.c  stm32u0xx_it.c  totp_app.c
firmware/ephemerkey-store/: Cargo.toml
firmware/ephemerkey-store/src/: lib.rs
firmware/ephemerkey-ui/: Cargo.toml
firmware/ephemerkey-ui/src/: lib.rs
firmware/lock-attiny/: Makefile  README.md
firmware/lock-attiny/src/: actuate.c  actuate.h  config.c  config.h  hall.c  hall.h  lock_config.h  lock_twi.c  lock_twi.h  main.c  nonce.c  nonce.h  power.c  power.h  secret.c  secret.h  servo.c  servo.h  solenoid.c  solenoid.h
firmware/lock-attiny/testharness/: Makefile  README.md  bridge.c  lock_debug.py  lock_test.py  soak.py
hardware/: Makefile  PARTS.md  fp-lib-table  sym-lib-table
hardware/ephemerkey/: ephemerkey.kicad_pcb  ephemerkey.kicad_pro  ephemerkey.kicad_sch  fp-lib-table  gnss.kicad_sch  mcu.kicad_sch  psu.kicad_sch  sensors.kicad_sch  storage.kicad_sch  sym-lib-table  wifi.kicad_sch
hardware/lib/3dmodels/: README.md  USB_C_GT-USB-7051A.step
hardware/lib/footprints.pretty/: ESP32-C3-MINI-1.kicad_mod  README.md  ST_UFDFPN8-8-1EP_2x3mm_P0.5mm_EP1.4x1.4mm.kicad_mod  UFQFPN-32-1EP_5x5mm_P0.5mm_EP3.5x3.5mm.kicad_mod  USB_C_Receptacle_G-Switch_GT-USB-7051x.kicad_mod  ublox_MAX.kicad_mod
hardware/lib/symbols/: README.md  ephemerkey.kicad_sym
hardware/lock/: README.md  drv.kicad_sch  fp-lib-table  lock-handsolder.txt  lock.kicad_pcb  lock.kicad_pro  lock.kicad_sch  mcu.kicad_sch  psu.kicad_sch
hardware/lock/fab/: BUILD.md  lock-BOM.csv  lock-CPL.csv
hardware/lock/fab/gerbers/: lock-B_Cu.gbl  lock-B_Mask.gbs  lock-B_Paste.gbp  lock-B_Silkscreen.gbo  lock-Edge_Cuts.gm1  lock-F_Cu.gtl  lock-F_Mask.gts  lock-F_Paste.gtp  lock-F_Silkscreen.gto  lock-drl_map.gbr  lock-job.gbrjob  lock.drl
hardware/scripts/: ephemerkey.schgen.py  jlcpcb-package.sh  kicad-sch-check.py  kicad-sch-render.sh  kschgen.py  lock.schgen.py
reference/: README.md
